@@ -1,40 +1,23 @@
 module Devise
   module Orm
     module MongoMapper
+      # Include attributes modules and set the proper ones.
+      def self.included_modules_hook(klass, modules)
+        klass.send :extend, self
 
-      include Devise::Orm::Base
-
-      def authenticatable
-        key :email, String
-        key :encrypted_password, String
-        key :password_salt, String
-      end
-
-      def confirmable
-        key :confirmation_token, String
-        key :confirmed_at, DateTime
-        key :confirmation_sent_at, DateTime
-      end
-
-      def recoverable
-        key :reset_password_token, String
-      end
-
-      def rememberable
-        key :remember_token, String
-        key :remember_created_at, DateTime
-      end
-
-      ##
-      # Add all keys
-      def add_fields(modules)
         modules.each do |mod|
-          send(mod)
+          klass.send(mod)
         end
+      end
+
+      include Devise::Schema
+
+      # Tell how to apply schema methods.
+      def apply_schema(name, type, options={})
+        key name, type, options
       end
     end
   end
 end
 
 MongoMapper::Document::ClassMethods.send(:include, Devise::Models)
-MongoMapper::Document::ClassMethods.send(:include, Devise::Orm::MongoMapper)
